--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,19 +29,16 @@
     <!-- <meta name="msapplication-TileImage" content="/mstile-144x144.png"> -->
     <meta name="theme-color" content="#318dba">
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <link rel="canonical" href="{canonicalUrl}" />
 
-    <script src="/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
   <body>
-
     <script>
       dataLayer = [
-        {dataLayer|js|s}
       ];
     </script>
-
     <!-- Google Tag Manager -->
     <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-NMCF28"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -53,7 +50,7 @@
     <!-- End Google Tag Manager -->
 
     <nav class="navbar navbar-dark bg-inverse" role="navigation">
-      <a class="navbar-brand media-middle mktmpio-logo" href="/">
+      <a class="navbar-brand media-middle mktmpio-logo" href="https://mktmp.io/">
         <svg width="32" height="32" viewBox="0 0 100 100" version="1">
           <filter id = "i1" width = "150%" height = "150%">
             <feOffset result = "offOut" in = "SourceAlpha" dx = "1.5" dy = "1.7"/>
@@ -75,42 +72,18 @@
       </button>
       <div class="collapse navbar-toggleable-xs" id="primary-navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="nav-item {@eq key=page value="/"}active{/eq}"><a class="nav-link" href="/">Home</a></li>
-          <li class="nav-item {@eq key=page value="/get-started"}active{/eq}"><a class="nav-link" href="/get-started">Get Started</a></li>
-          <li class="nav-item {@eq key=page value="/plans"}active{/eq}"><a class="nav-link" href="/plans">Plans &amp; Pricing</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://mktmp.io/">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://mktmp.io/get-started">Get Started</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://mktmp.io/plans">Plans &amp; Pricing</a></li>
+          <li class="nav-item active"><a class="nav-link" href="http://docs.mktmp.io/">Docs</a></li>
           <li class="nav-item"><a class="nav-link" href="http://blog.mktmp.io/">Blog</a></li>
-          {#user}
-            <li class="nav-item {@eq key=page value="/my-instances"}active{/eq}"><a class="nav-link" href="/my-instances">My Instances</a></li>
-          {/user}
-        </ul>
-        <ul class="nav navbar-nav pull-right">
-          <li class="nav-item dropdown">
-            {#user}
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                {displayName}
-              </a>
-              <div class="dropdown-menu" role="menu">
-                <a class="dropdown-item {@eq key=page value="/me"}active{/eq}" href="/me" ref="nofollow">Profile</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/logout" ref="nofollow">Logout</a>
-              </div>
-            {:else}
-              <a class="nav-link" href="/auth/github" ref="nofollow">Login</a></li>
-            {/user}
-          </li>
         </ul>
       </div>
     </nav>
 
-    <!-- <div class="container">
-      <div class="alert alert-warning" role="alert">
-        <strong>Preview!</strong>
-        The service works, but isn't ready for prime time yet. Please send
-        feedback to <a class="alert-link" href="mailto:mktmpio@datajin.com">mktmpio@datajin.com</a>.
-      </div>
-    </div> -->
-
-    {>"{_main}"/}
+    <div class="container">
+      {{content}}
+    </div>
 
     <hr />
 
@@ -125,15 +98,14 @@
         <p>
           &copy; Datajin Technologies 2015
           |
-          <a href="/terms-of-service">Terms of Service</a>
+          <a href="https://mktmp.io/terms-of-service">Terms of Service</a>
           |
-          <a href="/privacy-policy">Privacy Policy</a>
+          <a href="https://mktmp.io/privacy-policy">Privacy Policy</a>
         </p>
       </footer>
     </div> <!-- /container -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/twbs/bootstrap/v4.0.0-alpha/dist/js/bootstrap.js"></script>
-    <script src="/js/main.js"></script>
   </body>
 </html>
