--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,6 +81,7 @@
           <li class="nav-item"><a class="nav-link" href="https://mktmp.io/">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="https://mktmp.io/get-started">Get Started</a></li>
           <li class="nav-item"><a class="nav-link" href="https://mktmp.io/plans">Plans &amp; Pricing</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://mktmp.io/downloads">Downloads</a></li>
           <li class="nav-item active"><a class="nav-link" href="http://docs.mktmp.io/">Docs</a></li>
           <li class="nav-item"><a class="nav-link" href="http://blog.mktmp.io/">Blog</a></li>
         </ul>
